<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsActivity"
    android:orientation="vertical"
    android:padding="20sp">
    <EditText
        android:id="@+id/first_name_u_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/first_name"
        android:layout_marginBottom="20sp"/>

    <EditText
        android:id="@+id/last_name_u_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@null"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/phone_number"
        android:layout_marginBottom="20sp"
        android:inputType="number"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:text="confirm"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="back"/>

</LinearLayout>