<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserLoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_registration_button_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_d">
        <Button
            android:id="@+id/registration_button_d"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/registration"
            android:textColor="@color/background_almost_black" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login_button_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_d">
        <Button
            android:id="@+id/login_button_d"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/login"
            android:textColor="@color/background_almost_black" />

    </androidx.cardview.widget.CardView>




    <EditText
        android:id="@+id/email_input_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_textView_d"
        android:autofillHints="" />


    <EditText
        android:id="@+id/password_input_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_d"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/back_button_d"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/transparent"
        android:src="@drawable/icon_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_textView_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:text="@string/driver_login"
        android:textColor="@color/background_almost_black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_d" />

</androidx.constraintlayout.widget.ConstraintLayout>