<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.DriverRegistrationFragment">


    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_textView_signup_d">

        <EditText
            android:id="@+id/first_name_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@id/last_name_d" />

        <EditText
            android:id="@+id/last_name_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/email_signup_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_name" />

    <EditText
        android:id="@+id/password_signup_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_signup_d" />

    <EditText
        android:id="@+id/mobile_input_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_signup_d" />


    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_input_d">

        <TextView
            android:id="@+id/car_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_type"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup_d"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Motorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Motorcycle" />

            <RadioButton
                android:id="@+id/Vehicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vehicles" />

            <RadioButton
                android:id="@+id/Trucks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trucks" />
        </RadioGroup>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawableTint="@color/white"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:targetApi="m" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/back_button_signup_d"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/transparent"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/sign_in_textView_signup_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:text="@string/driver_registration"
        android:textColor="@color/background_almost_black"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@id/ll_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_signup_d" />

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:loading_color="@color/black"
        app:loading_width="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>