<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DriverLicenseFragment">

    <TextView
        android:id="@+id/driver_lic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:text="Driver License"
        android:textColor="@color/background_almost_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/frame1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/frame_bg"
        app:layout_constraintBottom_toTopOf="@id/frame2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/driver_lic_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:text="@string/car_license"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/car_err"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_error"
                    android:visibility="invisible"
                    android:scaleType="fitCenter"
                    app:tint="@color/red_error" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/license_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_bg"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/license_btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_bg"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/frame_bg"
        app:layout_constraintBottom_toTopOf="@id/frame3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:text="@string/driver_license"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/driver_err"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_error"
                    android:visibility="invisible"
                    android:scaleType="fitCenter"
                    app:tint="@color/red_error" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/d_license_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_bg"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/d_license_btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_bg"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame_bg"
        app:layout_constraintBottom_toTopOf="@id/cv_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:text="@string/drugs_test"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/test_err"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_error"
                    android:visibility="invisible"
                    android:scaleType="fitCenter"
                    app:tint="@color/red_error" />
            </LinearLayout>


            <ImageView
                android:id="@+id/drugs_test_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/frame_bg"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera" />


        </LinearLayout>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/registration_btn_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableRight="@drawable/ic_done"
            android:drawableTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:loading_color="@color/black"
        app:loading_width="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>